with SPARQL result parsing errors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
 <meta charset="utf-8">
+<html>
+<head></head>
 
 <body>
+
 <script src="jquery-2.1.4.js"></script>
 <script src="d3.js"></script>
 <script src="d3.layout.cloud.js"></script>
@@ -10,23 +13,81 @@
 <script type="text/javascript">
 //(function() {
 
-    console.log(theQuery);
+    console.log(theQueryRSJSON);
+/*
+    $.getJSON(theQueryRSJSONLocal,
+            {
 
-//    $.getJSON(theQuery,
-//            {},
-//            function(data) {
-//                console.log('data = ', data);
-//            });
+            },
+            function(data) {
+                alert('data = ', data);
+            });
+*/
 
-    $.ajax({
-        type: "GET",
-        dataType: "jsonp",
-        url: theQuery,
-        success: function(data) {processData(data);}
+
+/*
+    $(document).ready(function() {
+
+        jQuery.ajax({
+            type: 'GET',
+            url: theQueryRSJSONLocal,
+            dataType: 'jsonp',
+            success: function(data) {
+                alert('successhah ' + $(this).data()  );
+            }
+        });
     });
+*/
+
+    jQuery.ajax({
+        type: 'GET',
+        url: theQueryRSJSONLocal,
+        dataType: 'jsonp',
+        success: function(data) {
+            window.alert('successhah ' + $(this).data()  );
+        },
+        error: function(data) {
+            window.alert('errorrrrrhah ' + $(this).data()  );
+        }
+    });
+
+
+
+//    $.ajax({
+//        type: "GET",
+//        //dataType: "jsonp",
+//        contentType: 'text/plain',
+//        url: theQuery,
+//        xhrFields: {
+//            // The 'xhrFields' property sets additional fields on the XMLHttpRequest.
+//            // This can be used to set the 'withCredentials' property.
+//            // Set the value to 'true' if you'd like to pass cookies to the server.
+//            // If this is enabled, your server must respond with the header
+//            // 'Access-Control-Allow-Credentials: true'.
+//            withCredentials: false
+//        },
 //
-//    $.get(theQuery, function(data) {
-//        var lines = data.split('\r\n');})
+//        headers: {
+//            // Set any custom headers here.
+//            // If you set any non-simple headers, your server must include these
+//            // headers in the 'Access-Control-Allow-Headers' response header.
+//        },
+//        success: function() {
+//            // Here's where you handle a successful response.
+//        },
+//
+//        error: function() {
+//            // Here's where you handle an error response.
+//            // Note that if the error was due to a CORS issue,
+//            // this function will still fire, but there won't be any additional
+//            // information about the error.
+//        }
+////        crossDomain : true
+////        jsonpCallback: 'getJson',
+//    });
+
+
+
 
 var fill = d3.scale.category20();
 
@@ -80,13 +141,15 @@ var fill = d3.scale.category20();
            })
         .text(function(d) { return d.text; })
         .on("click", function(d) {window.open(d.link);});
-
     }
 
 //})();
 
 </script>
 </body>
+
+
+</html>
 
 
 
