--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     jQuery.ajax({
         type: 'GET',
-        url: theQueryRSJSONLocal,
+        url: theQueryRSJSON,
         dataType: 'jsonp',
         success: function(data) {
             window.alert('successhah ' + $(this).data()  );
